--- a/public/messageScreenStyle.css
+++ b/public/messageScreenStyle.css
@@ -89,6 +89,12 @@ form button[type="submit"]:hover {
     display: inline;
 }
 
+.editedElement {
+    color: rgb(200, 100, 0);
+    display: inline;
+    margin-left: 8px;
+}
+
 p.messageElement {
     color: rgb(200, 100, 0);
     display: block;
