--- a/public/css/globalChatStyle.css
+++ b/public/css/globalChatStyle.css
@@ -5,6 +5,7 @@ body {
     box-sizing: border-box;
     background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -15,11 +16,17 @@ body {
     box-shadow: 0 8px 32px 0 rgba(200, 0, 0, 0.9);
     padding: 40px 32px;
     min-width: 320px;
-    max-width: 100%;
+    max-width: 80vw;
+    width: 60vw;
     display: flex;
     flex-direction: column;
     gap: 18px;
-    width: 1000px;
+    margin-top: 100px;
+    margin-bottom: 30px;
+    max-height: calc(100vh - 240px);
+    height: calc(100vh - 240px);
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 .message-card h1 {
@@ -35,12 +42,14 @@ body {
     background: rgba(46, 45, 45, 1);
     border: 1px solid rgb(200, 100, 0);
     border-radius: 8px;
-    min-height: 500px;
-    max-height: 600px;
+    min-height: 0;
+    margin: 0 auto;
+    width: 95%;
     overflow-y: auto;
     padding: 15px;
     font-size: 1em;
     color: #333;
+    flex-grow: 1;
 }
 
 form {
@@ -83,7 +92,6 @@ form button[type="submit"]:hover {
     transform: translateY(-2px) scale(1.04);
 }
 
-/* My Personal Css */
 .usernameElement {
     color: rgb(200, 100, 0);
     display: inline;
@@ -140,28 +148,6 @@ input.messageElement {
 }
 
 .buttonElement:hover {
-    background: linear-gradient(90deg, rgb(252, 132, 3) , rgb(200, 0, 0));
-    transform: translateY(-2px) scale(1.04);
-}
-
-.logoutButton {
-    background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
-    color: black;
-    border: 3px solid black;
-    border-radius: 6px;
-    font-size: 1.05em;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background 0.2s, transform 0.2s;
-    box-shadow: 0 3px 10px rgb(57 173 219 / 8%);
-    position: fixed;
-    top: 0;
-    right: 0;
-    margin: 16px;
-    padding: 10px 28px;
-}
-
-.logoutButton:hover {
     background: linear-gradient(90deg, rgb(252, 132, 3) , rgb(200, 0, 0));
     transform: translateY(-2px) scale(1.04);
 }
