--- a/public/css/globalChatStyle.css
+++ b/public/css/globalChatStyle.css
@@ -14,7 +14,7 @@ body {
     background: black;
     border-radius: 18px;
     box-shadow: 0 8px 32px 0 rgba(200, 0, 0, 0.9);
-    padding: 40px 32px;
+    padding: 15px 25px;
     min-width: 320px;
     max-width: 80vw;
     width: 60vw;
@@ -23,14 +23,13 @@ body {
     gap: 18px;
     margin-top: 100px;
     margin-bottom: 30px;
-    max-height: calc(100vh - 240px);
-    height: calc(100vh - 240px);
+    max-height: calc(100vh - 200px);
+    height: calc(100vh - 200px);
     flex-grow: 0;
     flex-shrink: 0;
 }
 
 .message-card h1 {
-    margin: 0 0 20px 0;
     font-size: 2.1em;
     font-weight: 700;
     color: rgb(200, 100, 0);
@@ -39,13 +38,12 @@ body {
 }
 
 #messages {
-    background: rgba(46, 45, 45, 1);
-    border: 1px solid rgb(200, 100, 0);
-    border-radius: 8px;
+    background: black;
     min-height: 0;
     margin: 0 auto;
     width: 95%;
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 15px;
     font-size: 1em;
     color: #333;
@@ -65,13 +63,13 @@ form input[type="text"] {
     font-size: 1em;
     transition: border-color 0.2s, box-shadow 0.2s;
     outline: none;
-    background: rgba(46, 45, 45, 1);
+    background: black;
     color: rgb(200, 100, 0);
 }
 
 form input[type="text"]:focus {
     border-color: rgb(200, 100, 0);
-    box-shadow: 0 0 16px rgb(200, 100, 0);;
+    box-shadow: 0 0 16px rgb(200, 100, 0);
 }
 
 form button[type="submit"] {
@@ -111,9 +109,6 @@ p.messageElement {
     font-size: 16px;
     padding: 8px 12px;
     line-height: 1.4;
-    border: 1px solid rgb(200, 100, 0);
-    border-radius: 4px;
-    box-sizing: border-box;
     width: 100%;
 }
 
@@ -126,15 +121,15 @@ input.messageElement {
     padding: 8px 12px;
     line-height: 1.4;
     background: rgba(46, 45, 45, 1);
-    border: 1px solid rgb(200, 0, 0);
-    border-radius: 4px;
-    box-sizing: border-box;
     width: 100%;
 }
 
+input.messageElement:focus {
+    border-color: rgb(200, 0, 0);
+    box-shadow: 0 0 16px rgb(200, 0, 0);
+}
+
 .buttonElement {
-    min-height: 20px;
-    min-width: 50px;
     background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
     color: black;
     border: 3px solid rgba(200, 0, 0, 0.9);
@@ -150,4 +145,10 @@ input.messageElement {
 .buttonElement:hover {
     background: linear-gradient(90deg, rgb(252, 132, 3) , rgb(200, 0, 0));
     transform: translateY(-2px) scale(1.04);
+}
+
+.messageDivBorder {
+    margin-bottom: 5px;
+    border-bottom: 1px solid rgb(200, 100, 0);
+    box-sizing: border-box;
 }
