--- a/public/css/navBar.css
+++ b/public/css/navBar.css
@@ -7,7 +7,7 @@
     right: 0;
     display: flex;
     align-items: left;
-    justify-content: left;
+    justify-content: flex-start;
 }
 
 .navigationBar img {
@@ -46,4 +46,10 @@
 .navigationBar button.activeScreen{
     border-bottom: 3px solid black;
     border-radius: 3px;
+}
+
+.navigationBar h4 {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: 25px;
 }
