--- a/public/css/addFriendsStyle.css
+++ b/public/css/addFriendsStyle.css
@@ -9,3 +9,85 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+.friendListsContainer {
+    margin-top: 5vh;
+    width: 70vw;
+    height: calc(100vh - 280px);
+    display: flex;
+    gap: 20px;
+    color:rgb(200, 100, 0);
+}
+
+.friendsList {
+    background: black;
+    height: 100%;
+    width: 40%;
+    border-radius: 18px;
+    box-shadow: 0 8px 32px 0 rgba(200, 0, 0, 0.9);
+    padding: 15px 25px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.pendingFriendsList {
+    background: black;
+    height: 100%;
+    width: 60%;
+    border-radius: 18px;
+    box-shadow: 0 8px 32px 0 rgba(200, 0, 0, 0.9);
+    padding: 15px 25px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.friendsList h2, .pendingFriendsList h2 {
+    text-align: center;
+    color: rgb(200, 100, 0);
+}
+
+form input[type="text"] {
+    padding: 10px 12px;
+    border-radius: 6px;
+    border: 1px solid rgb(200, 100, 0);;
+    font-size: 1em;
+    transition: border-color 0.2s, box-shadow 0.2s;
+    outline: none;
+    background: black;
+    color: rgb(200, 100, 0);
+    width: 40vw;
+    height: 20px;
+    vertical-align: middle;
+}
+
+form input[type="text"]:focus {
+    border-color: rgb(200, 100, 0);
+    box-shadow: 0 0 16px rgb(200, 100, 0);
+}
+
+form button[type="submit"] {
+    padding: 10px 28px;
+    background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
+    color: black;
+    border: 3px solid rgba(200, 0, 0, 0.9);
+    border-radius: 6px;
+    font-size: 1.05em;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background 0.2s, transform 0.2s;
+    box-shadow: 0 3px 10px rgb(57 173 219 / 8%);
+    width: 10vw;
+    height: 40px;
+    vertical-align: middle;
+}
+
+form button[type="submit"]:hover {
+    background: linear-gradient(90deg, rgb(252, 132, 3) , rgb(200, 0, 0));
+    transform: translateY(-2px) scale(1.04);
+}
