--- a/public/css/addFriendsStyle.css
+++ b/public/css/addFriendsStyle.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
+    background: rgb(200, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
