--- a/public/css/friendChatStyle.css
+++ b/public/css/friendChatStyle.css
@@ -3,9 +3,10 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
+    background: rgb(200, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow-y: hidden;
 }
