--- a/public/css/globalChatStyle.css
+++ b/public/css/globalChatStyle.css
@@ -28,6 +28,10 @@ body {
     font-weight: 700;
     color: rgb(200, 100, 0);
     text-align: center;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 1.1;
     letter-spacing: 1px;
 }
 
