created the basic html/css setup of the friend chats feature

--- a/public/css/friendChatStyle.css
+++ b/public/css/friendChatStyle.css
@@ -3,10 +3,123 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: rgb(200, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow-y: hidden;
+}
+
+.overallDiv {
+    background: black;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    margin-top: 60px;
+    height: calc(100vh - 60px);
+    box-sizing: border-box;
+}
+
+.dmSelectorDiv {
+    background: black;
+    border-right: 3px solid rgb(200, 100, 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow-y: hidden;
+    box-sizing: border-box;
+    flex-direction: column;
+    height: 100%;
+    width: 20%;
+}
+
+#friendChatsSelectorDiv {
+    height: 90%;
+    width: 100%;
+    background-color: black;
+    box-sizing: border-box;
+}
+
+.activeChatDiv {
+    background: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow-y: hidden;
+    height: 100%;
+    width: 80%;
+}
+
+.messages {
+    background: black;
+    min-height: 0;
+    margin: 0 auto;
+    width: 95%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 15px;
+    font-size: 1em;
+    color: #333;
+    flex-grow: 1;
+    border: 2px solid rgb(200, 100, 0);
+    box-sizing: border-box;
+}
+
+#titleText {
+    font-size: clamp(14px, 3vw, 20px);
+    font-weight: 700;
+    color: rgb(200, 100, 0);
+    text-align: center;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 1.1;
+    letter-spacing: 1px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+form {
+    width: 95%;
+    height: 7%;
+    display: flex;
+    gap: 12px;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+form input[type="text"] {
+    flex-grow: 1;
+    padding: 10px 12px;
+    border-radius: 6px;
+    border: 1px solid rgb(200, 100, 0);;
+    font-size: 1em;
+    transition: border-color 0.2s, box-shadow 0.2s;
+    outline: none;
+    background: black;
+    color: rgb(200, 100, 0);
+}
+
+form input[type="text"]:focus {
+    border-color: rgb(200, 100, 0);
+    box-shadow: 0 0 16px rgb(200, 100, 0);
+}
+
+form button[type="submit"] {
+    padding: 10px 28px;
+    background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
+    color: black;
+    border: 3px solid rgba(200, 0, 0, 0.9);
+    border-radius: 6px;
+    font-size: 1.05em;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background 0.2s, transform 0.2s;
+    box-shadow: 0 3px 10px rgb(57 173 219 / 8%);
+}
+
+form button[type="submit"]:hover {
+    background: linear-gradient(90deg, rgb(252, 132, 3) , rgb(200, 0, 0));
+    transform: translateY(-2px) scale(1.04);
 }
