--- a/public/css/globalChatStyle.css
+++ b/public/css/globalChatStyle.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: linear-gradient(0deg, rgb(252, 132, 3) , rgb(200, 0, 0));
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -53,6 +52,12 @@ body {
 form {
     display: flex;
     gap: 12px;
+    width: 95%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 form input[type="text"] {
