--- a/public/css/navBar.css
+++ b/public/css/navBar.css
@@ -40,6 +40,7 @@
     margin: 0 5px;
     line-height: 60px;
     display: inline-block;
+    color: black;
 }
 
 .navigationBar button {
@@ -78,4 +79,5 @@
     display: inline-block;
     margin-left: 10px;
     margin-right: 6%;
+    color: black;
 }
