--- a/public/css/addFriendsStyle.css
+++ b/public/css/addFriendsStyle.css
@@ -14,7 +14,7 @@ body {
 .friendListsContainer {
     margin-top: 5vh;
     width: 70vw;
-    height: calc(100vh - 280px);
+    height: calc(100vh - 240px);
     display: flex;
     gap: 20px;
     color:rgb(200, 100, 0);
@@ -83,7 +83,7 @@ form button[type="submit"] {
     cursor: pointer;
     transition: background 0.2s, transform 0.2s;
     box-shadow: 0 3px 10px rgb(57 173 219 / 8%);
-    width: 10vw;
+    width: 160px;
     height: 40px;
     vertical-align: middle;
 }
@@ -96,7 +96,7 @@ form button[type="submit"]:hover {
 .pendingFriendDiv {
     display: flex;
     width: 100%;
-    height: 9%;
+    height: 40px;
     padding: 10px 20;
     justify-content: center;
     margin-top: 5px;
@@ -113,6 +113,8 @@ form button[type="submit"]:hover {
     font-size: clamp(12px, 1.5vw, 18px);
     font-weight: 600;
     cursor: pointer;
+    height: 40px;
+    width: 120px;
     transition: background 0.2s, transform 0.2s;
     vertical-align: middle;
     margin-right: 5px;
@@ -127,9 +129,8 @@ form button[type="submit"]:hover {
 .pendingFriendDiv p {
     display: inline-block;
     vertical-align: middle;
-    width: 60%;
-    max-width: 60%;
-    height: 100%;
+    width: calc(100% - 135px);
+    height: 40px;
     margin-left: 10px;
     margin-right: auto;
     text-align: left;
@@ -150,7 +151,7 @@ form button[type="submit"]:hover {
     cursor: pointer;
     transition: background 0.2s, transform 0.2s;
     box-shadow: 0 3px 10px rgb(57 173 219 / 8%);
-    width: 10vw;
+    width: 160px;
     height: 40px;
     vertical-align: middle;
     display: flex;
