updated readme to better reflect project

--- a/public/css/navBar.css
+++ b/public/css/navBar.css
@@ -52,6 +52,7 @@
     background-color: transparent;
     border: none;
     font-weight: bold;
+    color: black;
 }
 
 .navigationBar button:hover {
